--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@gabrielyotoo/react-use-timer": "^2.3.0",
     "@szhsin/react-menu": "^4.5.1",
-    "axios": "^1.13.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "use-sound": "^5.0.0"
+    "use-sound": "^5.0.0",
+    "usehooks-ts": "^3.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
